...
மண்ணுறு வார்களும் வானுறு வார்களும்
அண்ணல் இவன் என்றுஅறியகி லார்களே`,
    transliteration: `kaṇṇuta lāṉoru kātaliṉ niṟkavum
eṇṇili tēvar iṟantār eṉappalar
maṇṇuṟu vārkaḷum vāṉuṟu vārkaḷum
aṇṇal ivaṉ eṉṟuaṟiyaki lārkaḷē`,
    english: `12: Beyond Comprehension
The One of the fore-head eye, in Love Supreme, unmoved,
Dead were the countless Devas,
Born were the myriads on earth;
Upward they climbed to lives beyond count,
Yet none did know the Lord was He.`,
    audioUrl: 'https://www.kvnthirumoolar.com/wp-content/uploads/2020/08/Song-12-Proem-1.-Praise-of-God.mp3',
...
விண்ணளந் தாந்தன்னை மேலளந் தாரில்லை
கண்ணளந் தெங்குங் கடந்துநின் றானே`,
    transliteration: `maṇṇaḷan tāṉmala rōṉmutal tēvarkaḷ
eṇṇaḷan tiṉṉum niṉaikkilār īcaṉai
viṇṇaḷan tāntaṉṉai mēlaḷan tārillai
kaṇṇaḷan teṅkuṅ kaṭantuniṉ ṟāṉē`,
    english: `13: Immeasurable
Mal who spanned the earth and Brahma the Lotus seated one,
And others of the Gods fathomed Him not;
There be none to measure Him that measured the Heav'ns
And thus He stood, all visions transcending.`,
    audioUrl: 'https://www.kvnthirumoolar.com/wp-content/uploads/2020/08/Song-13-Proem-1.-Praise-of-God.mp3',
    elaborationEnglish: `Mal — Vishnu.`,
...
தேசங் கலந்தொரு தேவனென் றெண்ணினும்
ஈசன் உறவுக் கெதிரில்லை தானே`,
    transliteration: `kāyam iraṇṭuṅ kalantu kotikkiṉum
māyaṅ kattūri yatumikum avvaḻi
tēcaṅ kalantoru tēvaṉeṉ ṟeṇṇiṉum
īcaṉ uṟavuk ketirillai tāṉē`,
    english: `17: Love Profound
Howe'er well the two garlics and musk boil and mix,
Yet will musk's fragrance stand o'ertopping all,
So may all space mix and hold the God as One,
Yet, upwelling, pours forth Isan's love profound.`,
    audioUrl: 'https://www.kvnthirumoolar.com/wp-content/uploads/2020/08/Song-17-Proem-1.-Praise-of-God.mp3',
    elaborationTamil: `வெங்காயம் பெருங்காயம் ஆகிய இரண்டையும் ஒன்றாக கொதிக்க வைத்தாலும் அதிலிருந்து வரும் வாசனையை விட கருமையான கத்தூரியிலிருந்து வரும் வாசம் அதிகமாகும். அதுபோலவே உலகெங்கும் எத்தனை தெய்வங்களைத் தேடி அடைந்து அவர்களே இறைவன் என்று எண்ணிக்கொண்டு அவர்களோடு கலந்து முயன்றாலும் அனைத்திற்கும் இறைவனான ஈசுவரனை (சதாசிவமூர்த்தியை) கலந்து பெறும் உறவுக்கு (பேரின்பத்திற்கு) அது கொஞ்சம் கூட ஈடாகாது. 
...
எனக்குஇறை அன்பிலன் என்பர் இறைவன்
பிழைக்கநின் றார்பக்கம் பேணிநின் றானே`,
    transliteration: `maṉattil eḻukiṉṟa māyanaṉ nāṭaṉ
niṉaittatu aṟivaṉ eṉṉiltāṉ niṉaikkilar
eṉakkuiṟai aṉpilaṉ eṉpar iṟaivaṉ
piḻaikkaniṉ ṟārpakkam pēṇiniṉ ṟāṉē`,
    english: `22: Seek Him, He Seeks You
This Lord of Maya-land that has its rise in the mind,
He, the Being without thought, knows yet all our thoughts;
Some be who groan,"God is not to me a friend;"
But, sure, God seeks those who seek their souls to save.`,
    audioUrl: 'https://www.kvnthirumoolar.com/wp-content/uploads/2020/08/Song-22-Proem-1.-Praise-of-God.mp3',
    elaborationTamil: `இறைவன் தன்னை உண்மையான பக்தியோடு வணங்குபவர்களின் உள்ளத்தில் எழுந்தருளுபவன். அவர்களின் உள்ளத்தைக் கொள்ளை கொள்ளும் மாயக்காரன் அவர்களின் அன்பு கொண்ட உள்ளத்தையே தனக்கு ஒரு நல்ல இடமாக எண்ணி அதிலேயே வசிப்பவன். அவர்களின் மனதில் நினைத்ததையெல்லாம் அறிந்தவன். அப்படிப்பட்ட இறைவனை உண்மையான பக்தியோடு நினைக்காமல் என் மேல் இறைவனுக்கு அன்பில்லை என்று அறியாமையால் பலர் புலம்புகின்றார்கள். இந்த
...
இல்லென வேண்டா இறையவர் தம்முதல்
அல்லும் பகலும் அருளுகின் றானே`,
    transliteration: `vallavaṉ vaṉṉikaku iṟaiyiṭai vāraṇam
nilleṉa niṟpitta nītiyuḷ īcaṉai
illeṉa vēṇṭā iṟaiyavar tammutal
allum pakalum aruḷukiṉ ṟāṉē`,
    english: `23: Infinite Grace
The Mighty Lord, the God of Fire, set amidst the seas,
Whom the comprehending souls never deny;
He, the Lord of the Heavenly Beings all,
Who, day and night, pours forth His Divine Grace.`,
    audioUrl: 'https://www.kvnthirumoolar.com/wp-content/uploads/2020/08/Song-23-Proem-1.-Praise-of-God-1.mp3',
    elaborationTamil: `சர்வ வல்லமை படைத்தவனும் அக்கினிக்குத் தலைவனானவனும் காட்டு யானைத் தோலை ஆடையாகப் போர்த்தியவனும் மும்மலங்கள் தனது அடியவர்களைப் பாதிக்காது நில் என்று கட்டளையிட்டவனும் அனைத்து உயிர்களுக்கும் சரிசமமாக நீதியை வழங்குபவனுமாகிய எம்பெருமான் இறைவனை அறியாமையால் இல்லை என்று கூறாதீர்கள். வானத்து தேவர்கள் முதல் அனைத்து உயிர்களுக்கும் இரவும் பகலும் இடையறாது அருளை வழங்கி நிற்கின்றான் இறைவன். 
...
